--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Questrial);
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:700);
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #333333;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #9C27B0;
+}
+
 html,
 body {
     width: 100%;
@@ -8,7 +24,7 @@ body {
 }
 
 body {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
     background-color: #282828;
     color: #d3d3d3;
     -webkit-tap-highlight-color: #222;
@@ -39,8 +55,13 @@ a:focus {
     outline: 0;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
 }
 
 p {
@@ -73,7 +94,7 @@ p {
 }
 
 .text-faded {
-    color: rgba(245,245,245,0.7);
+    color: rgba(245, 245, 245, 0.7);
 }
 
 .text-dark {
@@ -105,16 +126,16 @@ footer {
 }
 
 .navbar-default {
-    border-color: rgba(35,35,35,.05);
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    border-color: rgba(35, 35, 35, .05);
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
     background-color: #222;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
 }
 
-.navbar-header > .navbar-brand {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+.navbar-header>.navbar-brand {
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
     color: #9c27b0;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
@@ -126,19 +147,22 @@ footer {
     transition: all 1s;
 }
 
-.navbar-header > .navbar-brand:hover,
-.navbar-header > .navbar-brand:focus {
+.navbar-header>.navbar-brand:hover,
+.navbar-header>.navbar-brand:focus {
     color: #8b27b0;
 }
 
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
     background-color: #181818;
 }
-.navbar-default .navbar-toggle, .navbar-default .navbar-collapse {
+
+.navbar-default .navbar-toggle,
+.navbar-default .navbar-collapse {
     border-color: transparent;
 }
 
-.navbar-default .nav > li>a,
+.navbar-default .nav>li>a,
 .navbar-default .nav>li>a:focus {
     text-transform: uppercase;
     font-size: 13px;
@@ -146,20 +170,19 @@ footer {
     color: #eee;
 }
 
-.navbar-default .nav > li>a:hover,
+.navbar-default .nav>li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
     color: #9c27b0;
 }
 
-.navbar-default .nav > li.active>a,
+.navbar-default .nav>li.active>a,
 .navbar-default .nav>li.active>a:focus {
     color: #9c27b0 !important;
     background-color: transparent;
 }
 
-.navbar-default .nav > li.active>a:hover,
-.navbar-default .nav>li.active>a:focus:hover
-{
+.navbar-default .nav>li.active>a:hover,
+.navbar-default .nav>li.active>a:focus:hover {
     background-color: transparent;
 }
 
@@ -171,8 +194,8 @@ footer {
         min-height: 60px;
     }
 
-    .navbar-header > .navbar-brand {
-        color: rgba(255,255,255,0.7);
+    .navbar-header>.navbar-brand {
+        color: rgba(255, 255, 255, 0.7);
         padding: 19px;
     }
 
@@ -181,21 +204,21 @@ footer {
         color: #f4f4f4;
     }
 
-    .navbar-default .nav > li>a,
+    .navbar-default .nav>li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,0.8);
+        color: rgba(255, 255, 255, 0.8);
         padding: 20px;
         letter-spacing: 1.1px;
-        text-shadow: 1px 1px 1px rgba(60,60,60,0.7);
+        text-shadow: 1px 1px 1px rgba(60, 60, 60, 0.7);
     }
 
-    .navbar-default .nav > li>a:hover,
+    .navbar-default .nav>li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
         color: #fefefe;
     }
 
     .navbar-default.affix {
-        border-color: rgba(34,34,34,.05);
+        border-color: rgba(34, 34, 34, .05);
         background-color: #222;
     }
 
@@ -211,13 +234,13 @@ footer {
         color: #8b27b0;
     }
 
-    .navbar-default.affix .nav > li>a,
+    .navbar-default.affix .nav>li>a,
     .navbar-default.affix .nav>li>a:focus {
         color: #ddd;
-        text-shadow: 1px 1px 1px rgba(30,30,30,0.7);
+        text-shadow: 1px 1px 1px rgba(30, 30, 30, 0.7);
     }
 
-    .navbar-default.affix .nav > li>a:hover,
+    .navbar-default.affix .nav>li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
         color: #9c27b0;
     }
@@ -256,33 +279,33 @@ header .header-content .inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 #video-background {
-  position: absolute;
-  right: 0; 
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto; 
-  height: auto;
-  z-index: 1;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 1;
 }
 
 #video-background.collapsing {
-  display:none;
+    display: none;
 }
 
 footer {
-    background-color:#2d2d2d;
+    background-color: #2d2d2d;
 }
 
 @media(min-width:768px) {
     .icon-lg {
         font-size: 80px;
     }
-    
+
     header {
         min-height: 100%;
     }
@@ -312,7 +335,7 @@ footer {
         max-width: 80%;
         font-size: 18px;
     }
-    
+
     section {
         min-height: 600px;
         padding: 100px 0;
@@ -374,7 +397,7 @@ textarea {
     position: relative;
     margin: 0 auto;
     max-width: 650px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .gallery-box .gallery-box-caption {
@@ -386,7 +409,7 @@ textarea {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(44,44,44,.8);
+    background: rgba(44, 44, 44, .8);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -415,7 +438,7 @@ textarea {
     transition: all 300ms ease-in-out;
 }
 
-.no-gutter > [class*=col-] {
+.no-gutter>[class*=col-] {
     padding-right: 0;
     padding-left: 0;
 }
@@ -445,7 +468,7 @@ textarea {
 .btn-default.focus,
 .btn-default:active,
 .btn-default.active,
-.open > .dropdown-toggle.btn-default {
+.open>.dropdown-toggle.btn-default {
     border-color: #ededed;
     color: #222;
     background-color: #f2f2f2;
@@ -454,7 +477,7 @@ textarea {
 
 .btn-default:active,
 .btn-default.active,
-.open > .dropdown-toggle.btn-default {
+.open>.dropdown-toggle.btn-default {
     background-image: none;
 }
 
@@ -488,8 +511,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn.btn-primary {
     background-color: transparent;
-    border:1px solid #f0f0f0;
-    border-color:#f0f0f0;
+    border: 1px solid #f0f0f0;
+    border-color: #f0f0f0;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -502,7 +525,7 @@ fieldset[disabled] .btn-default.active {
 .btn {
     border: 0;
     border-radius: 290px;
-    font-family: 'Helvetica Neue',Arial,sans-serif;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .btn-xl {
