--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #9C27B0;
+    background: #9290C3;
 }
 
 html,
@@ -43,7 +43,7 @@ hr.light {
 }
 
 a {
-    color: #9c27b0;
+    color: #9290C3;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -51,7 +51,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #9c27c1;
+    color: #9290C3;
     outline: 0;
 }
 
@@ -102,7 +102,7 @@ p {
 }
 
 .text-primary {
-    color: #9c27b0;
+    color: #9290C3;
 }
 
 .modal-content {
@@ -126,9 +126,9 @@ footer {
 }
 
 .navbar-default {
-    border-color: rgba(35, 35, 35, .05);
+    border-color: #070F2B;
     font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
-    background-color: #222;
+    background-color: #070F2B;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
     transition: all .4s;
@@ -136,7 +136,7 @@ footer {
 
 .navbar-header>.navbar-brand {
     font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
-    color: #9c27b0;
+    color: #9290C3;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
     -moz-transition: padding .2s ease-in;
@@ -149,12 +149,12 @@ footer {
 
 .navbar-header>.navbar-brand:hover,
 .navbar-header>.navbar-brand:focus {
-    color: #8b27b0;
+    color: #9290C3;
 }
 
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
-    background-color: #181818;
+    background-color: #070F2B;
 }
 
 .navbar-default .navbar-toggle,
@@ -172,12 +172,12 @@ footer {
 
 .navbar-default .nav>li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #9c27b0;
+    color: #9290C3;
 }
 
 .navbar-default .nav>li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #9c27b0 !important;
+    color: #9290C3 !important;
     background-color: transparent;
 }
 
@@ -218,20 +218,20 @@ footer {
     }
 
     .navbar-default.affix {
-        border-color: rgba(34, 34, 34, .05);
-        background-color: #222;
+        border-color: #070F2B;
+        background-color: #070F2B;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 15px;
-        color: #9c27b0;
+        color: #9290C3;
         padding: 20px;
         letter-spacing: 1px;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #8b27b0;
+        color: #9290C3;
     }
 
     .navbar-default.affix .nav>li>a,
@@ -242,7 +242,7 @@ footer {
 
     .navbar-default.affix .nav>li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #9c27b0;
+        color: #9290C3;
     }
 }
 
@@ -253,7 +253,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('./img/bg2.jpg');
+    background-image: url('./img/bg.jpeg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -448,6 +448,7 @@ textarea {
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     transition: all 1s;
+
 }
 
 .inner a {
